--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,32 @@
 server.port=8080
-logging.level.ru.yandex.practicum=error
+logging.level.ru.practicum=debug
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+
+spring.jpa.show-sql=true
+
+javax.persistence.schema-generation.database.action=create
+javax.persistence.schema-generation.create-script-source=schema.sql
+
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+
+#---
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
+#---
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+
+#spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.url=jdbc:h2:mem:./db/shareit
+
+spring.datasource.username=test
+spring.datasource.password=test
