--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.datasource.password=shareit
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 
-#spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.url=jdbc:h2:mem:./db/shareit
+spring.datasource.url=jdbc:h2:mem:shareit
+#spring.datasource.url=jdbc:h2:file:./db/shareit
 
 spring.datasource.username=test
 spring.datasource.password=test
