fix(add-item-requests): add item-requests & user, items tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 server.port=8080
 logging.level.ru.practicum=debug
 booking.statuses.worked=[WAITING, APPROVED]
+itemrequest.pagination.default.size=80
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 javax.persistence.schema-generation.database.action=create
 javax.persistence.schema-generation.create-script-source=schema.sql
