--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 javax.persistence.schema-generation.database.action=create
 javax.persistence.schema-generation.create-script-source=schema.sql
@@ -25,9 +25,6 @@ spring.datasource.password=shareit
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
-
 spring.datasource.url=jdbc:h2:mem:shareit
-#spring.datasource.url=jdbc:h2:file:./db/shareit
-
 spring.datasource.username=test
 spring.datasource.password=test
