feat(add-docker): add docker-compose.yml

--- a/shareIt-gateway/src/main/resources/application.properties
+++ b/shareIt-gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
-logging.level.ru.practicum=error
-logging.level.org.springframework.web.client.RestTemplate=error
+logging.level.ru.practicum=debug
+logging.level.org.springframework.web.client.RestTemplate=debug
 #logging.level.org.apache.http=DEBUG
 #logging.level.httpclient.wire=DEBUG
 
-shareit-server.url=http://localhost:9091
+shareit-server.url=http://localhost:9090
