--- a/shareIt-server/src/main/resources/application.properties
+++ b/shareIt-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=9091
-logging.level.ru.practicum=error
+server.port=9090
+logging.level.ru.practicum=debug
 booking.statuses.worked=[WAITING, APPROVED]
 
 spring.jpa.hibernate.ddl-auto=none
