fix(add-docker): rename modules

--- a/shareit-server/src/main/resources/application.properties
+++ b/shareit-server/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.sql.init.mode=always
 
 spring.jpa.show-sql=false
 
-javax.persistence.schema-generation.database.action=create
-javax.persistence.schema-generation.create-script-source=schema.sql
+#javax.persistence.schema-generation.database.action=create
+#javax.persistence.schema-generation.create-script-source=schema.sql
 
 logging.level.org.springframework.orm.jpa=error
 logging.level.org.springframework.transaction=error
