--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 	</properties>
 
 	<modules>
-		<module>shareIt-gateway</module>
-		<module>shareIt-server</module>
+		<module>shareit-gateway</module>
+		<module>shareit-server</module>
 	</modules>
 
 	<build>
