--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
-logging.level.ru.practicum=debug
+logging.level.ru.practicum=error
 booking.statuses.worked=[WAITING, APPROVED]
 
 spring.jpa.hibernate.ddl-auto=none
