--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
-logging.level.ru.practicum=debug
-logging.level.org.springframework.web.client.RestTemplate=debug
+logging.level.ru.practicum=error
+logging.level.org.springframework.web.client.RestTemplate=error
 #logging.level.org.apache.http=DEBUG
 #logging.level.httpclient.wire=DEBUG
 
