--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 server.port=8080
 logging.level.ru.practicum=error
 logging.level.org.springframework.web.client.RestTemplate=error
-#logging.level.org.apache.http=DEBUG
-#logging.level.httpclient.wire=DEBUG
 
-shareit-server.url=http://localhost:9090
+shareit-server.url=${SHAREIT_SERVER_URL}
