--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,9 +9,6 @@ spring.sql.init.mode=always
 
 spring.jpa.show-sql=false
 
-#javax.persistence.schema-generation.database.action=create
-#javax.persistence.schema-generation.create-script-source=schema.sql
-
 logging.level.org.springframework.orm.jpa=error
 logging.level.org.springframework.transaction=error
 logging.level.org.springframework.transaction.interceptor=TRACE
@@ -19,9 +16,9 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=error
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=shareit
-spring.datasource.password=shareit
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${POSTGRES_USER:shareit}
+spring.datasource.password=${POSTGRES_PASSWORD:shareit}
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
